--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         <div class="container ">
             <div class="section">
                 <div class="wrapper">
-                    <div class="box1">salom</div>
+                    <div class="box1"></div>
                     <div class="box2"></div>
                     <div class="box3"></div>
+                </div>
+                <div class="box__timer">
+                    <h2 class="timer">0</h2>
                 </div>
                 <div class="wrapper2">
                     <div class="piyoda">
                         <div class="box__one "></div>
                         <div class="box__two"></div>
                     </div>
-                </div>
-                <div class="box__timer">
-                    <div class="timer" id="seconds">00</div>
                 </div>
             </div>
         </div>
